// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Article Count test Render the authors article counts as expected for a UQ researcher) 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1bckzb6-MuiGrid-root"
    >
      313
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-184x3de-MuiGrid-root"
    >
      eSpace works from
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-1lr4ka9-MuiGrid-root"
    >
      1975
      <span>
         to 
      </span>
      2018
    </div>
  </div>
</div>
`;

exports[`Dashboard Article Count test should have a style generator 1`] = `
Object {
  "articlesFrom": Object {
    "color": "#fff",
    "fontSize": "0.9rem",
    "fontWeight": "600",
    "lineHeight": "1rem",
    "padding": "0 16px",
    "textAlign": "center",
  },
  "dateRange": Object {
    "color": "#fff",
    "fontSize": "1.25rem",
    "fontWeight": "600",
    "lineHeight": "1.5rem",
    "padding": "0 16px",
    "textAlign": "center",
  },
  "noOfArticles": Object {
    "color": "#fff",
    "fontSize": "4.75rem",
    "fontWeight": "600",
    "lineHeight": "4.75rem",
    "padding": "0 16px",
    "textAlign": "center",
  },
}
`;

exports[`Dashboard Article Count test should not render anything if any data is missing 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
  />
</div>
`;
